5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1871_1719.log
== TEST (2019-07-02 16:20:07) 
-- CODE:
from numpy import *
from numpy.linalg import * 
n = array(eval(input('matriz:'))
b=0
for i in n:
	a = sum(n[i,:])//size(n[:,j]
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 4
    b=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:27) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
for i in n:
	a = sum(n[i,:])//size(n[:,j]
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 5
    for i in n:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:43) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
for i in range(size(n)):
	a = sum(n[i,:])//size(n[:,j]
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 5
    for i in range(size(n)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:52) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
for i in range(size(n)):
	a = sum(n[i,:])//size(n[:,j]
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 5
    for i in range(size(n)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:19) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
	a = sum(n[i,:])//size(n[:,j]
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 5
    a = sum(n[i,:])//size(n[:,j]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:53) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
	a = sum(n[i,:])//size(n[:,j])
	b = b+1
if a[i]==max(n[i,;]):
	print(b)
-- ERROR:
File "XXXX", line 5
    a = sum(n[i,:])//size(n[:,j])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:14) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
n = array(eval(input('matriz:'))
	a = sum(n[i,:])//size(n[:,j])
if (a[i]>=5):
	b=b+1
	print(b)
-- ERROR:
File "XXXX", line 5
    a = sum(n[i,:])//size(n[:,j])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:37:51) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(x)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
	
if (a[i]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(x)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:20) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(size(n))
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
	
if (a[i]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(size(n))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:34) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(0)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
	
if (a[i]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(0)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:36) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(0)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
	
if (a[i]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(0)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:13) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(a,a)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
	
if (a[i]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(a,a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:33) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(x,x)int=dtype
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(x,x)int=dtype
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:41) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(x,x),int=dtype
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(x,x),int=dtype
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:48) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(x,x)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(x,x)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:34) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros()
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:46) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(float)
	a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:44:35) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a[k]=sum(n[i,:])/size(n[i,:])
	k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a[k]=sum(n[i,:])/size(n[i,:])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:03) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(4)
a[k]=sum(n[i,:])/size(n[i,:])
	k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(4)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:12) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros()
a[k]=sum(n[i,:])/size(n[i,:])
	k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:23) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:00) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(size(n[i,:],int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(size(n[i,:],int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:48:21) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
0.807231
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:47) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros[n]
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros[n]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:47) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:43) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(4,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(4,int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:59) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(,int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:11) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- ERROR:
File "XXXX", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:24) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
1.14043
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:25) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
1.59242
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:26) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
2.29627
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:27) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
4.2992
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:27) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
4.85685
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:29) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
5.60803
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:36) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
3.84731
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:37) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
4.11824
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:38) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
4.12881
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:38) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
3.91948
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:39) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
3.93705
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:39) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
3.56505
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:41) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
2.46019
-- ERROR:
  File "/home/codebench/codes/1871/1719/main.py", line 6
    a = zeros(n,int=dtype)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:53:41) 
-- CODE:
from numpy import *
from numpy.linalg import * 
b=0
k=0
n = array(eval(input('matriz:'))
a = zeros(n,int=dtype)
   a[k]=sum(n[i,:])/size(n[i,:])
		k=k+1
if (a[k]>=5):
	b=b+1
print(b)
-- EXECUTION TIME:
1.399
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1871/1719/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
